fixed link hover on mobile

--- a/src/components/shared/Project/Project.module.css
+++ b/src/components/shared/Project/Project.module.css
@@ -66,9 +66,6 @@
 
       .description {
         max-width: 35rem;
-        overflow: hidden;
-        white-space: nowrap;
-        text-overflow: ellipsis;
       }
 
       .btn {
