--- a/src/components/shared/ProjectHero/ProjectHero.module.css
+++ b/src/components/shared/ProjectHero/ProjectHero.module.css
@@ -64,6 +64,7 @@
   transition: color 0.3s;
   color: var(--white);
   padding-bottom: 8px;
+  width: fit-content;
 
   @media (--lg) {
     font-size: 1.5rem;
@@ -93,6 +94,7 @@
 .link-container {
   display: flex;
   flex-direction: column;
+  gap: .5rem;
 
   @media (--lg) {
     flex-direction: row;
