--- a/src/components/shared/Projects/Projects.module.css
+++ b/src/components/shared/Projects/Projects.module.css
@@ -72,9 +72,6 @@
 
         .description {
           max-width: 35rem;
-          overflow: hidden;
-          white-space: nowrap;
-          text-overflow: ellipsis;
         }
 
         .btn {
